work on annual review

--- a/_posts/other/archive/2022-09-08-annualreview2022.md
+++ b/_posts/other/archive/2022-09-08-annualreview2022.md
@@ -5,7 +5,7 @@ zotero:
   author-in-text: false # when true, enabled fake author-name-only cites by replacing it with the text of the last names of the authors
   csl-style: harvard # pre-fill the style
 layout: post
-categories: other
+categories: archive
 title: Annual Review - Year 3 (part-time PhD) - Mick Chesterman
 ---
 
@@ -15,7 +15,7 @@ The primary aims of this review document is give to a short update on research a
 
 While there has been a large body of research on the value and practice of game making for educational purposes, it is a dynamic landscape which has many areas which merit additional research [-@kafai_constructionist_2015]. New software tools which make games offering new pedagogical possibilities emerge regularly. Game playing practices and the opportunities provided by participation in wider communities also continue to evolve. For example, casual and retro games played by both adults and children are increasingly available via smart phones and home consoles. The nostalgia around such games and the associated aesthetics of cuteness creates a potential for connection between younger and older players [@boyle_retro-futurism_2017]. My study, in part, asks how the motivational and navigational affordances of enthusiast game making communities can be brought into more structured educational environments.  
 
-## Summary of Activity since RD2
+## Summary of Wider Activity since RD2
 
 My RD2 was in December 2019. I was suspended from studies in Summer 2020 and restarted earlier this summer in June 2022. This section is a brief summary of some of the activities that I have managed to undertake in this timeframe.
 
@@ -46,7 +46,10 @@ The key features of the 3M Game Making Model are outlined below. The implementat
 | Free choice of Patterns increases learner engagement and ownership   | Tracing the learner pathway on an attractive physical map in the learning space can help integrate navigation and reflection into the creative process | Drama and fictional scenarios can help explore issues and reduce learner anxiety though coding in a role          |
 | Restrict Game Type and number of Patterns to reduce Facilitator stress       |                      | Adding electronics to control the game via arcade buttons and cabinets increases engagement and perceptions of project authenticity |
 | Limit  complexity of patterns. Some are simple but cause a large change in the game       |    |        |
-| Side missions which explore and celebrate different ‘maker types’ (from  Bartle’s player types)          |        |     |
+| Side missions which explore and celebrate different ‘maker ty  - RQ1 - What game making pedagogies exist?
+  - RQ2 - How can educators support the development of a community of game makers?
+  - RQ3 - How do game patterns support the development of coding practices with novices?
+  - RQ3 - What effect does a pedagogical model focused on the development of a community of game makers have on parent and child learner experiences of digital game making?pes’ (from  Bartle’s player types)          |        |     |
 
 Table 1.2.  Key Features of 3M Game Making Model
 
@@ -55,27 +58,46 @@ BOX ENDS
 
 ### Book Chapters
 
-I have completed three book chapters this year (pre-publisher versions available at https://mickfuzz.github.io/phd4/book_chapters.html).  
+I have completed three book chapters this year of which pre-publisher versions are available online[^2].  
 
-Two were for an audience of teachers. One on abstract and concrete approaches to computing education and another on design and project approaches. The process of writing them
-was productive in shaking up my thinking on Computational Thinking and conceptions of abstract concepts and more grounded concrete practices in the fields of computing education, project and inclusive contexts. Another book chapter for a collection on teaching coding focused directly on game making and outlined the 3M model and the accompanying resources for learners that I have created during the course of my research.  
+Two chapters were for an audience of teachers as part of a proposed collection "Inclusive practice and theory in computing education, Alternative perspectives on curriculum and classrooms". One chapter analysed abstract and concrete approaches to computing education. The other covered design and project approaches in this subject. The process of writing the chapters was productive in shaking up my thinking on Computational Thinking and other conceptions of abstract concepts compared to more grounded concrete practices in the fields of computing education. A book chapter for an internation collection on teaching coding focused directly on game making. In it I outlined the 3M model and the accompanying resources for learners that I have created during the course of my research.  
 
 ### Creation of Resources for Learners & Educators
 
 At RD2 stage I explained that a new software tool had been launched called MakeCode Arcade (MCA) with allowed the use of common game design framework patterns within a block-coding tool. I adapted the resources created for the Glitch ssytem that I had already been using to work with MCA.
 
 **Phaser and Glitch.com:** The following resources exist for text-based coding using the Phaser javascript framework.
-
-* A splash page for Phaser / Glitch.com resources. This contains links to print outs, tutorials and activities [^1].  
-* An interactive starting template and grid of game design patterns that learners can add to the incomplete template[^2].
+* A splash page for Phaser / Glitch.com resources. This contains links to print outs, tutorials and activities [^2].  
+* An interactive starting template and grid of game design patterns that learners can add to the incomplete template[^3].
 
 **3M & MakeCode Arcade:**  The application of the 3M model applied using the MakeCode Arcade software is available online as part of a collaborative online documentation repository. The resource includes a template of a broken game to fix, printable cards offering quick changes to core design patterns, printable documents which describe game design patterns and steps of how to implement them, a map of learning dimensions that learners are likely to encounter when making games, and an adaptable five-week course of activities[^3].
+
+## Progress towards Thesis Completion
+
+I
+
+### Iterative Revision of Research Design
+
+The foundation of this research is a design-based research approach which is underlined by Activity Theory as a conceptual framework. While the analysis of results at RD2 stage was going to be based on Engeström's detailed framework of third generation Activity Theory, my attempts to write up emerging results within this extensive and prescriptive framework were cumbersome.
+
+Instead, I have been returned to design-based research as a core methodology with Cultural Historical Activity Theory (CHAT) as a conceptual framework. Specifically, I am using Rogoff's [-@rogoffObservingSocioculturalActivity1993] three planes / foci of personal, social and community as an analytical tool. The model is promising as it problematises the dichotomy of learner led, teacher led approaches @mascolo_beyond_2009 in a way which suits the space between formal and informal learning that this community based model of game making occupies.
+
+
+I am exploring mapping the three elements of the 3M model to the three foci; cultural, social and personal planes of Rogoff's model. I will be requesting help on this aspect of the process from my supervisors.
+
+
+
+<!-- Possible reasons for this seeming mismatch include the disconnection of my learning environment from the workplace siting often assumed in that model when paired with the suggested methodology of formative interventions. The process of trying to map the different levels of activity happening in the formation and evolution of a community and the temptation to write something about each of the axes was overwhelming. -->
+
+
+
+Emerging Focus on Design Patterns
 
 ### Data Gathering - Additional Material and Summary
 
 In early 2020 I rad two additional courses on game making. The first involved a similar level of video data capture and participants to earlier courses with 360, the second was more restricted due to the rooms that were available. Limited screen capture data was recorded.
 
-![Figure 1.2. Data Gathering Stages](../Pictures/data_stages.png){ width=96% }
+![Figure 1.2. Data Gathering Stages - Also included in Appendix](../Pictures/data_stages.png){ width=96% }
 
 A TABLE OF STAGES OF DATA GATHERING FOLLOWS - AS IMAGE / Linked in Appendix
 https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/edit#
@@ -102,17 +124,7 @@ Thus while additional data gathering was useful in terms of notes gathered and d
 
 when coding I started with some preset codes from the literature for examples Barron's codes on parent roles when helping digital projects. However, as coding progressed, I modified and extended these codes to better match the data I was working with. The coding structure is included as an appendix.
 
-## Iterative Project Design Revision
 
-The foundation of this research is a design-based research approach which is underlined by Activity Theory as a conceptual framework. While the analysis of results at RD2 stage was going to be based on Engeström's detailed framework of third generation Activity Theory, my attempts to write up emerging results within this extensive and prescriptive framework were cumbersome.
-
-<!-- Possible reasons for this seeming mismatch include the disconnection of my learning environment from the workplace siting often assumed in that model when paired with the suggested methodology of formative interventions. The process of trying to map the different levels of activity happening in the formation and evolution of a community and the temptation to write something about each of the axes was overwhelming. -->
-
-Instead, I have been experimenting with writing up using CHAT as a conceptual framework suplemented with an different analysis tools to allow for wider interpretation. Specifically, I am using Rogoff's three planes / foci as an analytical tool.
-
-Alternating between concrete and abstract - CT as a source of debate for this area - deepening my understanding and practitioner focus.
-
-Emerging Focus on Design Patterns
 
 ## Next Goals
 
@@ -121,13 +133,13 @@ I include a brief description of my next stages in this thesis.
  - **Write up one chapter of results:** I am focusing on Design Patterns as the basis for one chapter of results.
  - **Ongoing coding and analysis of video data:** I will continue to analyse video data in depth and search for key moments of interaction.
  - **Exploration of emerging concepts in existing research:** As concepts and practices emerge as being particularly significant, I will focus on those elements in existing research and practice and compare and contrast my findings.
-- **Explore how to present 3M framework within results chapters:** While the 3M framework is suitable for dissemination in practice, there is still work to be done to frame it in relation to existing knowledge in the field. I am exploring mapping the three elements of the 3M model to the three foci; cultural, social and personal planes of Rogoff's model. I will be requesting help on this aspect of the process from my supervisors.
+- **Explore how to present 3M framework within results chapters:** While the 3M framework is suitable for dissemination in practice, there is still work to be done to frame it in relation to existing knowledge in the field.
 - **Revision of Research questions: **As I began coding, the need to focus research questions became apparent. While the exact wording of the questions is as yes unfixed, the following questions are my current candidates.
 
-- RQ1 - What game making pedagogies exist?
-- RQ2 - How can educators support the development of a community of game makers?
-- RQ3 - How do game patterns support the development of coding practices with novices?
-- RQ3 - What effect does a pedagogical model focused on the development of a community of game makers have on parent and child learner experiences of digital game making?
+  - RQ1 - What game making pedagogies exist?
+  - RQ2 - How can educators support the development of a community of game makers?
+  - RQ3 - How do game patterns support the development of coding practices with novices?
+  - RQ3 - What effect does a pedagogical model focused on the development of a community of game makers have on parent and child learner experiences of digital game making?
 
 
 ## Appendices
@@ -137,7 +149,7 @@ I include a brief description of my next stages in this thesis.
 - Current coding structure.
 - Abstract and link to full book chapter - and draft chapters
 
-
-[^1]: https://glitch-game-makers-manual.glitch.me/
-[^2]: https://ggc-examples.glitch.me/
-[^3]: https://mickfuzz.github.io/makecode-platformer-101/
+[^1]: https://mickfuzz.github.io/phd4/book_chapters.html
+[^2]: https://glitch-game-makers-manual.glitch.me/
+[^3]: https://ggc-examples.glitch.me/
+[^4]: https://mickfuzz.github.io/makecode-platformer-101/
