writing on annual report and keywords on bookchapters

--- a/_posts/other/2022-09-12-annualreview2022.md
+++ b/_posts/other/2022-09-12-annualreview2022.md
@@ -3,13 +3,13 @@ zotero:
   scannable-cite: false # only relevant when your compiling to scannable-cite .odt
   client: zotero # defaults to zotero
   author-in-text: false # when true, enabled fake author-name-only cites by replacing it with the text of the last names of the authors
-  csl-style: harvard # pre-fill the style
+  csl-style: harvard-manchester-metropolitan-university # pre-fill the style
 layout: post
 categories: other
 title: Annual Review - Year 3 (part-time PhD) - Mick Chesterman
 ---
 
-The primary aims of this review document is give to a short update on research activity and to frame emerging results from the study in line with existing material in this field.
+The primary aims of this review document is give to a short update on activities surrounding my PhD and on the progress of my thesis.
 
 ## Review of Context of Research
 
@@ -17,48 +17,32 @@ While there has been a large body of research on the value and practice of game 
 
 ## Summary of Wider Activity since RD2
 
-My RD2 was in December 2019. I was suspended from studies in Summer 2020 and restarted earlier this summer in June 2022. This section is a brief summary of some of the activities that I have managed to undertake in this timeframe.
+My RD2 was in December 2019. Due to COVID studies stopped in Summer 2020 and restarted in June 2022. This section is a brief summary of some of the activities that I have managed to undertake in this time frame.
 
 ### Early Dissemination of Results via Presentations
 
-While lock down presented some challenges. There were opportunities to disseminate early results.
-
-- **Online Mozilla Conference 2021:** I presented an overview of the key salient features of a my learning model" during an online conference organised by Mozilla (pioneers of in informal digital learning and associated tools [@sefton-green_mapping_2013]).
+- **Online Mozilla Conference 2021:** I presented an overview of the key features of the game making learning model that has emerged from my PhD research during an online conference organised by Mozilla (pioneers of in informal digital learning and associated tools [@sefton-green_mapping_2013]).
 -  **Online Presentation at Manchester Games Network:** a 90 minute presentation and interactive session.
 - **Informal Participation on Playful Learning conference 2022:** The use of games consoles loaded with games created by participants is an engaging way to talk about my research.
 
-This early dissemination of results prompted an deeper analysis of my existing data in terms of the overarching themes. I wanted to present the themes in an accessible way which suited the dissemination of findings to audiences of academics and educators in both formal and informal domains. The a pedagogical model which I called the 3M Game Making Model emerged from this process. As this has become a key output of my research I will outline the model briefly before continuing this report.
+This early dissemination of results prompted a deeper analysis of my existing data in terms of the overarching themes. A pedagogical model which I called the 3M Game Making Model emerged from this process. As this has become a key output of my research I will outline the model briefly before continuing this report.
 
 BOX BEGINS
 
 ### Summary of 3M Game Making Model
 
-The key features of the 3M Game Making Model are outlined below. The implementation of game design patterns as missions by learners as a core unit of activity. Maps are used by both learners and facilitators as reflective and navigational tools. Finally methods are used by primarily by facilitators in planning session activities.
+The key features of the 3M Game Making Model are outlined below.
 
 ![Figure 1.1. Synthesising diagram of 3M Game Making Model](../Pictures/3msynthesis.png){ width=80% }
 
 
-| **Missions**         | **Maps**             | **Methods**          |
-|----------------|-----------|------------|
-| Simple code changes yield quick feedback  | A map of learning dimensions flexibly linked to main missions/patterns can be used by both learners and facilitators       | Play Testing in each session aids short term motivation.  Showcase events help longer-term motivation and aid project prioritisation   |
-| Free choice of Patterns increases learner engagement and ownership   | Tracing the learner pathway on an attractive physical map in the learning space can help integrate navigation and reflection into the creative process | Drama and fictional scenarios can help explore issues and reduce learner anxiety though coding in a role          |
-| Restrict Game Type and number of Patterns to reduce Facilitator stress       |                      | Adding electronics to control the game via arcade buttons and cabinets increases engagement and perceptions of project authenticity |
-| Limit  complexity of patterns. Some are simple but cause a large change in the game       |    |        |
-| Side missions which explore and celebrate different ‘maker ty  - RQ1 - What game making pedagogies exist?
-  - RQ2 - How can educators support the development of a community of game makers?
-  - RQ3 - How do game patterns support the development of coding practices with novices?
-  - RQ3 - What effect does a pedagogical model focused on the development of a community of game makers have on parent and child learner experiences of digital game making?pes’ (from  Bartle’s player types)          |        |     |
-
-Table 1.2.  Key Features of 3M Game Making Model
+![Figure 1.2. Text Summary of 3M Game Making Model - text in appendix or at http://tiny.cc/3m-12s](../Pictures/3m_summary.png){ width=80% }
 
 BOX ENDS
 
-
 ### Book Chapters
 
-I have completed three book chapters this year of which pre-publisher versions are available online[^2].  
-
-Two chapters were for an audience of teachers as part of a proposed collection "Inclusive practice and theory in computing education, Alternative perspectives on curriculum and classrooms". One chapter analysed abstract and concrete approaches to computing education. The other covered design and project approaches in this subject. The process of writing the chapters was productive in shaking up my thinking on Computational Thinking and other conceptions of abstract concepts compared to more grounded concrete practices in the fields of computing education. A book chapter for an internation collection on teaching coding focused directly on game making. In it I outlined the 3M model and the accompanying resources for learners that I have created during the course of my research.  
+I have completed three book chapters this year of which pre-publisher versions are available online[^1]. Two chapters were for an audience of teachers as part of a proposed collection _Inclusive practice and theory in computing education, Alternative perspectives on curriculum and classrooms_. One chapter analysed abstract and concrete approaches to computing education. The other covered design and project approaches in this subject. The process of writing the chapters was productive in shaking up my thinking on Computational Thinking and other conceptions of abstract concepts compared to more grounded concrete practices in the fields of computing education. A book chapter for an internation collection on teaching coding focused directly on game making. In it, I outlined the 3M model and described the accompanying resources for learners that I have created during the course of my research.  
 
 ### Creation of Resources for Learners & Educators
 
@@ -68,75 +52,98 @@ At RD2 stage I explained that a new software tool had been launched called MakeC
 * A splash page for Phaser / Glitch.com resources. This contains links to print outs, tutorials and activities [^2].  
 * An interactive starting template and grid of game design patterns that learners can add to the incomplete template[^3].
 
-**3M & MakeCode Arcade:**  The application of the 3M model applied using the MakeCode Arcade software is available online as part of a collaborative online documentation repository. The resource includes a template of a broken game to fix, printable cards offering quick changes to core design patterns, printable documents which describe game design patterns and steps of how to implement them, a map of learning dimensions that learners are likely to encounter when making games, and an adaptable five-week course of activities[^3].
+**3M & MakeCode Arcade:**  The application of the 3M model applied using the MakeCode Arcade software is available online as part of a collaborative online documentation repository. The resource includes a template of a broken game to fix, printable cards offering quick changes to core design patterns, printable documents which describe game design patterns and steps of how to implement them, a map of learning dimensions that learners are likely to encounter when making games, and an adaptable five-week course of activities[^4].
 
 ## Progress towards Thesis Completion
 
-
 ### Evolution of Research Methodology
 
-The foundation of this research is a design-based research approach which is underlined by Activity Theory (AT) as a conceptual framework. At RD2 stage analysis of results slated to use Engeström's -@engestrom_activity_2006 detailed framework of third generation Activity Theory. However my attempts to write up emerging results within this extensive  framework were cumbersome. This may be due to the pescriptive nature of this interpretation of ATs [@bakhurst_reflections_2009; @spinuzzi_trying_2020].
+The foundation of this research is a design-based research approach which is underlined by Activity Theory (AT) as a conceptual framework. At RD2 stage analysis of results slated to use Engeström's -@engestrom_activity_2006 detailed framework of third generation Activity Theory (3GAT). However my attempts to write up emerging results within this extensive  framework were cumbersome. This may be due to the prescriptive nature of 3GAT as a formative, developmental framework rather than simply an analytical tool [@bakhurst_reflections_2009; @spinuzzi_trying_2020]. Instead, I have been returned to design-based research as a core methodology with Cultural Historical Activity Theory (CHAT) retained as an underlying conceptual framework. To reflect this, I am using Rogoff's [-@rogoff_observing_1995-1] three planes / foci of personal, social and community as an analytical tool. The model is promising as it problematises the dichotomy of learner led, teacher led approaches [@mascolo_beyond_2009] in a way which suits the space between formal and informal learning that this community based model of game making occupies.
 
-Instead, I have been returned to design-based research as a core methodology with Cultural Historical Activity Theory (CHAT) retained as an underlying conceptual framework. To reflect this, I am using Rogoff's [-@rogoffObservingSocioculturalActivity1993] three planes / foci of personal, social and community as an analytical tool. The model is promising as it problematises the dichotomy of learner led, teacher led approaches [@mascolo_beyond_2009] in a way which suits the space between formal and informal learning that this community based model of game making occupies.
-
-Activity Theory relies on analysis of systemic tensions in activity and culture [@barab_using_2002]. I have found the identification of tensions and strategies used by learners, parents and facilitators to be a valuable starting point in analysis of complex learning environment. While more in depth work is still in process
 
 <!-- Possible reasons for this seeming mismatch include the disconnection of my learning environment from the workplace siting often assumed in that model when paired with the suggested methodology of formative interventions. The process of trying to map the different levels of activity happening in the formation and evolution of a community and the temptation to write something about each of the axes was overwhelming. -->
-
-Emerging Focus on Design Patterns
 
 ### Data Gathering - Additional Material and Summary
 
 In early 2020 I rad two additional courses on game making using the MakeCode Arcade tool and my own resources. A summary of data gathering stages is included as a table below.
 
-![Figure 1.2. Data Gathering Stages - text available at http://tiny.cc/data-stages](../Pictures/data_stages.png){ width=96% }
+![Figure 1.3. Data Gathering Stages - text in appendix or at http://tiny.cc/data-stages](../Pictures/data_stages.png){ width=96% }
 
 ### Data Analysis
 
-Initial results relied on data analysis of my journal entries, informal interactions and formal interviews with participants, selection of key vignettes from video recordings and identification of the key features of the supporting resources and learning strategies that I created in response to emerging tensions. While the process of
+CHAT relies on analysis of systemic tensions in activity and culture [@barab_using_2002]. Initial results relied on data analysis of my journal entries, informal interactions and formal interviews with participants, selection of key vignettes from video recordings and identification of the key features of the supporting resources and learning strategies that I created in response to emerging tensions. While the process of analysing tensions is still underway, I have included a link to emerging observations and responses in the appendix [^5].
 
-#### Nvivo coding
+#### Coding of Video Data in Nvivo
 
-when coding I started with some preset codes from the literature for examples Barron and colleagues' on parent roles when helping digital projects [-@barron_parents_2009]. As coding progressed, I have been modified and extended these codes to better match the data I was working with. The coding structure is still being revised as I continue to analyse data.
+When coding I started with some preset codes from the literature for examples Barron and colleagues' on parent roles when helping digital projects [-@barron_parents_2009]. As coding progressed, I have modified and extended these roles into codes to better match my recorded data. I have also drawn on design stages, modes of interaction do guide coding. The coding structure is still being revised as I continue to analyse data. I am exploring alternatives to coding video data in the Nvivo software package due to its limitations in playing and reviewing video data.
 
-The process of of a more systematic triangulation of that data with video data analysis is underway. Before starting this detailed analysis of the data I was unsure if sufficient relevant data had gathered or if more needed to be undertaken. However the material gathered proved to be very rich in terms of both social interactions between team making participants and community interactions happening on a wider scale. Thus rather than gathering more data, I am looking at restricting detailed analysis of data to that  gathered in 2019 as it quickly became apparent that the initial sessions of data gathering in the first half of 2019 were by far the richest terms of this social and community activity.
+#### Challenges and Opportunities of Detailed Data Analysis
 
-These was social and community aspects stand  out to me as potentially the most fruitful due to lack of similar, social approaches in the context of game making at this age range.
+This study presents significant challenges in regards to analysis of data, some foreseen and some unexpected. The challenges include;
 
-In the RD2 a vignette was selected as an exemplar of material gathered. The data from 360 camera allowed clarification and gesture analysis to be added to a transcription and description of what was happening on the laptop screens of the pair of participants in questions.
+- the length of time required to analyse data  
+- collating data from significantly after the date
+- the breadth of possible streams of study threaten deeper coding and analysis
 
-This study presented significant challenges in regards to analysis of data, some foreseen and some unexpected.
+However, the depth of data gathered provides opportunities.The data from 360 camera allows clarification and gesture analysis to be added to a transcription and description of what was happening on the laptop screens of the pair of participants in questions. It is possible to process video data in a way which allows a near complete picture of the individual, small group and community actions and interactions in a potential novel way. I will aim to demonstrate this technique and the potential richness of this technique of data processing and reviewing in my presentation for the annual review.
 
-- The challenge of the length of time required to analyse data.  
-- The process of collating and contrasting data from significantly after the date is challenging.
-- The breadth of possible streams of study made deeper coding and analysis difficult
+#### Other Thoughts on Data Analysis
 
-Thus while additional data gathering was useful in terms of notes gathered and development of material, it will not be analysed in the depth of the first iteration and may be the basis of future analysis in follow up papers.
+The process of of a more systematic triangulation of that data with video data analysis is underway. The material gathered proved to be very rich in terms of both social interactions between team making participants and community interactions happening on a wider scale. I am looking at restricting detailed analysis of data to that gathered in 2019 as these sessions of data gathering are very rich terms of this social and community activity. These interpersonal and cultural aspects stand out to me as potentially the most fruitful due to lack of similar, social approaches in the context of game making at this age range. It was this observation that has prompted the examination of Rogoff's [-@rogoff_observing_1995-1] three foci model described above.
 
 ## Next Goals
 
 I include a brief description of my next stages in this thesis.
 
- - **Write up one chapter of results:** I am focusing on Design Patterns as the basis for one chapter of results.
+ - **Write up one chapter of results:** I am focusing on the use of Design Patterns by learners as a primary unit of activity as the basis for a chapter of results. I am writing a draft of this chapter currently.
  - **Ongoing coding and analysis of video data:** I will continue to analyse video data in depth and search for key moments of interaction.
  - **Exploration of emerging concepts in existing research:** As concepts and practices emerge as being particularly significant, I will focus on those elements in existing research and practice and compare and contrast my findings.
 - **Explore how to present 3M framework within results chapters:** While the 3M framework is suitable for dissemination in practice, there is still work to be done to frame it in relation to existing knowledge in the field.
-- **Revision of Research questions: **As I began coding, the need to focus research questions became apparent. While the exact wording of the questions is as yes unfixed, the following questions are my current candidates.
-
-  - RQ1 - What game making pedagogies exist?
-  - RQ2 - How can educators support the development of a community of game makers?
-  - RQ3 - How do game patterns support the development of coding practices with novices?
-  - RQ3 - What effect does a pedagogical model focused on the development of a community of game makers have on parent and child learner experiences of digital game making?
+- **Revision of Research questions: **As I began coding, the need to focus research questions became apparent. My current RQs are below.
 
 
 ## Appendices
 
-The following resources are available as online documents. 
+1. Current Research Questions
+2. Summary of Data Gathering as Table
+3. Annual Review Presentation
+4. Tensions emerging and evolving from 3M model
+5. Key Features of 3M Game Making Model
 
-- **Summary of the data gathering as table:** online at  http://tiny.cc/data-stages
-- **Annual Review Presentation:** online at http://tiny.cc/annual2022-pres
-- **Tensions emerging and evolving from 3M model :** http://tiny.cc/3m-tensions
 
+### Current Research Questions
+ - RQ1 - What game making pedagogies exist?
+ - RQ2 - How can educators support the development of a community of game makers?
+ - RQ3 - How do game patterns support the development of coding practices with novices?
+ - RQ4 - What effect does a pedagogical model focused on the development of a community of game makers have on parent and child learner experiences of digital game making?
+
+### Summary of Data Gathering as Table
+
+Online at  http://tiny.cc/data-stages
+
+### Annual Review Presentation
+
+Online at http://tiny.cc/annual2022-pres
+
+### Tensions emerging and evolving from 3M model
+Online at  http://tiny.cc/3m-tensions
+
+### Key Features of 3M Game Making Model
+
+Online at http://tiny.cc/3m-12s
+
+| **Missions**         | **Maps**             | **Methods**          |
+|----------------|-----------|------------|
+| Simple code changes yield quick feedback  | A map of learning dimensions flexibly linked to main missions/patterns can be used by both learners and facilitators       | Play Testing in each session aids short term motivation.  Showcase events help longer-term motivation and aid project prioritisation   |
+| Free choice of Patterns increases learner engagement and ownership   | Tracing the learner pathway on an attractive physical map in the learning space can help integrate navigation and reflection into the creative process | Drama and fictional scenarios can help explore issues and reduce learner anxiety though coding in a role          |
+| Restrict Game Type and number of Patterns to reduce Facilitator stress       |                      | Adding electronics to control the game via arcade buttons and cabinets increases engagement and perceptions of project authenticity |
+| Limit  complexity of patterns. Some are simple but cause a large change in the game       |    |        |
+| Side missions which explore and celebrate different ‘maker types’ (from  Bartle’s player types)          |        |     |
+
+Table 1.2. Key Features of 3M Game Making Model
+
+
+## References
 
 [^1]: https://mickfuzz.github.io/phd4/book_chapters.html
 [^2]: https://glitch-game-makers-manual.glitch.me/
