--- a/_posts/other/2022-09-12-annualreview2022.md
+++ b/_posts/other/2022-09-12-annualreview2022.md
@@ -11,7 +11,7 @@ title: Annual Review - Year 3 (part-time PhD) - Mick Chesterman
 
 The primary aims of this review document is give to a short update on activities surrounding my PhD and on the progress of my thesis.
 
-## Review of Context of Research
+## Part One -  Review of Context of Research
 
 While there has been a large body of research on the value and practice of game making for educational purposes, it is a dynamic landscape which has many areas which merit additional research [-@kafai_constructionist_2015]. New software tools which make games offering new pedagogical possibilities emerge regularly. Game playing practices and the opportunities provided by participation in wider communities also continue to evolve. For example, casual and retro games played by both adults and children are increasingly available via smart phones and home consoles. The nostalgia around such games and the associated aesthetics of cuteness creates a potential for connection between younger and older players [@boyle_retro-futurism_2017]. My study, in part, asks how the motivational and navigational affordances of enthusiast game making communities can be brought into more structured educational environments.  
 
@@ -42,19 +42,22 @@ BOX ENDS
 
 ### Book Chapters
 
-I have completed three book chapters this year of which pre-publisher versions are available online[^1]. Two chapters were for an audience of teachers as part of a proposed collection _Inclusive practice and theory in computing education, Alternative perspectives on curriculum and classrooms_. One chapter analysed abstract and concrete approaches to computing education. The other covered design and project approaches in this subject. The process of writing the chapters was productive in shaking up my thinking on Computational Thinking and other conceptions of abstract concepts compared to more grounded concrete practices in the fields of computing education. A book chapter for an internation collection on teaching coding focused directly on game making. In it, I outlined the 3M model and described the accompanying resources for learners that I have created during the course of my research.  
+I have completed three book chapters this year of which pre-publisher versions are available online[^1]. Two chapters were for an audience of teachers as part of a proposed collection _Inclusive practice and theory in computing education, Alternative perspectives on curriculum and classrooms_. One chapter analysed abstract and concrete approaches to computing education. The other covered design and project approaches in this subject. I will be able to include material from this writing into my introductory thesis chapters.
+
+I completed a draft chapter for an internation collection on teaching coding. In this chapter named _Game Making and Coding Fluency in a Primary Computing Context_, I outlined the 3M game making model and described the accompanying resources for learners that I have created during the course of my research. I also described the implementation of game design patterns as missions by learners as a core unit of activity of the model. This chapter is the most up-to-date and extensive overview of my research design and findings to date and is available online linked as an appendix.
 
 ### Creation of Resources for Learners & Educators
 
-At RD2 stage I explained that a new software tool had been launched called MakeCode Arcade (MCA) with allowed the use of common game design framework patterns within a block-coding tool. I adapted the resources created for the Glitch ssytem that I had already been using to work with MCA.
+At RD2 stage I explained that a new software tool had been launched called MakeCode Arcade (MCA) with allowed the use of common game design framework patterns within a block-coding tool. I adapted the resources created for the Glitch environment to be suitable for use with MCA.
 
 **Phaser and Glitch.com:** The following resources exist for text-based coding using the Phaser javascript framework.
-* A splash page for Phaser / Glitch.com resources. This contains links to print outs, tutorials and activities [^2].  
-* An interactive starting template and grid of game design patterns that learners can add to the incomplete template[^3].
+
+-  A splash page for Phaser / Glitch.com resources. This contains links to print outs, tutorials and activities [^2].  
+-  An interactive starting template and grid of game design patterns that learners can add to the incomplete template[^3].
 
 **3M & MakeCode Arcade:**  The application of the 3M model applied using the MakeCode Arcade software is available online as part of a collaborative online documentation repository. The resource includes a template of a broken game to fix, printable cards offering quick changes to core design patterns, printable documents which describe game design patterns and steps of how to implement them, a map of learning dimensions that learners are likely to encounter when making games, and an adaptable five-week course of activities[^4].
 
-## Progress towards Thesis Completion
+##  Part Two - Progress towards Thesis Completion
 
 ### Evolution of Research Methodology
 
@@ -65,7 +68,7 @@ The foundation of this research is a design-based research approach which is und
 
 ### Data Gathering - Additional Material and Summary
 
-In early 2020 I rad two additional courses on game making using the MakeCode Arcade tool and my own resources. A summary of data gathering stages is included as a table below.
+In early 2020 I ran two additional courses on game making using the MakeCode Arcade tool and my own resources. A summary of data gathering stages is included as a table below.
 
 ![Figure 1.3. Data Gathering Stages - text in appendix or at http://tiny.cc/data-stages](../Pictures/data_stages.png){ width=96% }
 
@@ -79,17 +82,17 @@ When coding I started with some preset codes from the literature for examples Ba
 
 #### Challenges and Opportunities of Detailed Data Analysis
 
-This study presents significant challenges in regards to analysis of data, some foreseen and some unexpected. The challenges include;
+The quality of the video data collected was high and, put simply, there is a lot of it. This study presents significant challenges in regards to analysis of data, some foreseen and some unexpected. The challenges include;
 
-- the length of time required to analyse data  
-- collating data from significantly after the date
-- the breadth of possible streams of study threaten deeper coding and analysis
+- The length of time required to analyse data collected from multiple sessions on each participants computers is even longer than anticipated.
+- Curating and processing 360 data from significantly after the date presents issues of incomplete file transfers / other data integrity challenges.
+- The breadth of possible avenues of study provided by the data make deeper coding and analysis impossible before an additional focusing of aims
 
-However, the depth of data gathered provides opportunities.The data from 360 camera allows clarification and gesture analysis to be added to a transcription and description of what was happening on the laptop screens of the pair of participants in questions. It is possible to process video data in a way which allows a near complete picture of the individual, small group and community actions and interactions in a potential novel way. I will aim to demonstrate this technique and the potential richness of this technique of data processing and reviewing in my presentation for the annual review.
+However, the depth of data gathered provides opportunities. The data from 360 camera allows clarification and gesture analysis to be added to a transcription and description of what was happening on the laptop screens of the pair of participants in questions. It is possible to process video data in a way which allows a near complete picture of the individual, small group and community actions and interactions in a potential novel way. I will aim to demonstrate this technique and the potential richness of this technique of data processing and reviewing in my presentation for the annual review.
 
 #### Other Thoughts on Data Analysis
 
-The process of of a more systematic triangulation of that data with video data analysis is underway. The material gathered proved to be very rich in terms of both social interactions between team making participants and community interactions happening on a wider scale. I am looking at restricting detailed analysis of data to that gathered in 2019 as these sessions of data gathering are very rich terms of this social and community activity. These interpersonal and cultural aspects stand out to me as potentially the most fruitful due to lack of similar, social approaches in the context of game making at this age range. It was this observation that has prompted the examination of Rogoff's [-@rogoff_observing_1995-1] three foci model described above.
+The process of a more systematic triangulation of that data with video data analysis is underway. The material gathered proved to be very rich in terms of both social interactions between team making participants and community interactions happening on a wider scale. I am looking at restricting detailed analysis of data to that gathered in 2019 as these sessions of data gathering are very rich in terms of social and community design activity. These interpersonal and cultural aspects stand out to me as potentially the most fruitful due to lack of similar, social approaches in the context of game making for this age range. It was this observation that has prompted the examination of Rogoff's [-@rogoff_observing_1995-1] three foci model described above.
 
 ## Next Goals
 
@@ -109,6 +112,7 @@ I include a brief description of my next stages in this thesis.
 3. Annual Review Presentation
 4. Tensions emerging and evolving from 3M model
 5. Key Features of 3M Game Making Model
+6. Book Chapter - Game Making and Coding Fluency in a Primary Computing Context
 
 
 ### Current Research Questions
@@ -140,8 +144,12 @@ Online at http://tiny.cc/3m-12s
 | Limit  complexity of patterns. Some are simple but cause a large change in the game       |    |        |
 | Side missions which explore and celebrate different ‘maker types’ (from  Bartle’s player types)          |        |     |
 
-Table 1.2. Key Features of 3M Game Making Model
+Table  Key Features of 3M Game Making Model
 
+### Book Chapter - Game Making and Coding Fluency in a Primary Computing Context
+
+Available online at
+https://mickfuzz.github.io/phd4/bookchapter/2022/08/08/Game_Making_and_Coding_Fluency_in_Primary_Computing_Context.html
 
 ## References
 
