on to funds of knowledge

--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -459,6 +459,46 @@ The use and design characteristics of the starting point of a half-baked game.
 - simple structure of code in terms of aligning with framework and not adding extra functions
 
 
+**Variable editing effective movement**
+
+Player movement was a key to playtesting feedback as such three  key variables were highlighted at the very start of the game code and given descriptive names to facilitate their editing. When testing the game, the player's jump height was not great enough to allow progression up from the floor to one of the platform thus thwarting the collection of items.
+
+Game progression require altering at least one of the descriptively names variables associated with jump height and then activating a preview window to observer the changes by playing the game in a new browser tab.
+<!--FIND  Some evidence of building proficiency with significant work to change these three -->
+
+    // Variables that change how the player moves
+    var gravity = 500;
+    var velocity_x = 100;
+    var velocity_y = 300;
+
+While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others were much less concerted with this aspect of game play, lowering gravity drastically to allow a greater jump size but a more frustrating floaty jump.
+
+**Level design and prototyping**
+
+The starting game template included a minimal amount of platforms, hazards to avoid and golden blocks to collect. Image 4.x above show a printable _quick start_ cards to aid participants to begin the process of changing level design.
+
+As preThe possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure.
+
+The vignette in the last chapter saw Toby's adding new levels to his game and undertaking many iterations of changes to the level design. He and several other participants spent extensive time performing level design activity with a goal of making the game extremely challenging but still technically possible. Others played with the convention of the game by removing all hazards and filling the screen with rewards/coins (an example is outlined in the starting vignette of the next chapter).
+
+**Incomplete graphical blocks & Piskel**
+
+The use of blank, coloured blocks of 32 x 32 pixels encouraged participants to change the graphical design and the relatively small size of the sprites encouraged rapid design.
+
+PERHAPS REPLACE THIS WITH SCREEN SHOT OF PISKEL AS A TOOL
+![](./Pictures/whale_1.png){width=50%}
+
+The process of creating a pixel art characters and hazard involved using an online grid design tool called Piskel, creating an design of an appropriate size, saving, exporting as an image, downloading to the hard drive of the laptop in use and finally uploading and incorporating the image into the code project and linking using code syntax.
+
+**Incomplete graphical blocks & Piskel**
+
+The 
+
+PARK FOR NOW - Maybe move to Design
+The concept of the feel of the game or the challenges maps to the Dynamics of MDA framework.
+
+
+
 ### Phase Three
 
 The delivery of the second phase in early 2019 drew on this participant feedback and detailed reading of relevant literature to bring substantial changes to the programme.
