--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -49,18 +49,22 @@ title: 4. Emerging Learning Designs
         REQUESTS](#discussion-on-tensions-in-relation-to-lit-review-and-requests)
 -   [Link to next chapter](#link-to-next-chapter)
 
-## ADDTIONAL Notes
-
 
 
 
 
 ## Chapter Introduction  
 
+**Recap of context and specifics of designing for informal learning**
+
+- my interest in informal learning - recap rogoff and similar - and - issues of designing for informal settings
+- design based experiments - some factors - transistion from previous chapter
+
 This chapter charts the evolution of the learning design. It draws on immediate analysis of participants reactions and contributions from journal notes, participant interviews and analysis of changes in the learning resources created.
 
+Exposing tensions is key to the process of design
 
-NOTE - DEVELOP THE WORK ON TADS  - ESPECIALLY THE TENSIONS AND SECONDARY STIMULATION
+TADS and other types of agency are useful 
 
 The work of Sannino on the use of secondary stimulation in formative interventions (including 5th Dimension) informs the analysis of conflicts arising and secondary tools and processes which facilitators use to address them [@sannino_activity_2011].
 This chapter begins the process continued in later chapters.  
@@ -79,20 +83,15 @@ https://drive.google.com/drive/u/1/folders/1D-VhVj-NgN3qgk3YEx4HZEozf_1UOGtE
 
 
 
-
-## Contextual factors from practitioner perspective influencing design
-
-**Recap of context and specifics of designing for informal learning**
-
-- design based experiments - some factors
-- informal learning - recap rogoff and similar - issues of designing for informal settings
-
 <!-- As per Rogoff's analysis of informal learning in museaums [], the process of finding a medium between structured activity and authentic activity can be challenging.
 
 The kinds of exhibits which invite extended play are of interest to this study. Such design indicates that there are affordances that invite revised design, tinkering and ongoing play.
 -->
 
-**Cultural influences on my choice of learning design**
+<!-- **Cultural influences on my choice of learning design**
+
+NOTE - MOVE TO INTRO  - NO NEED
+
 
 I set up the working pattern based on my professional experiences and my own academic and cultural interests. As mentioned in the introduction, DIY culture, remix culture, repair culture, TAZ events are strong influences to the learning design based on the ideals of an autonomous community.
 
@@ -100,7 +99,7 @@ I set up the working pattern based on my professional experiences and my own aca
  - the link to cultural practices of code patching and remixing - the example of the plumber coder potentially being someone who finishes the job rather than elegant coder.
  - other experiences of social coding being important being part of a community working on a joint project (add a quote from Dave?)
  <!-- - A walled garden approach in terms of the GDP and code documentation and examples that are used. Based on my own experience of developer documentation and varied coding approaches. -->
-- Other examples from the interviews with practitioners are relevant to include here.
+- Other examples from the interviews with practitioners are relevant to include here. -->
 
 **Practical factors**
 
